--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
+    <!-- умный_чел_вочках--умный_чел_вочках-->
     <link rel="stylesheet" href="style12.css">
     <br><br>
 </body>
