--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
     <meta lang="ru">
     <meta charset="utf-8">
-    <title> Умный чел в очках Смотреть Онлайн</title>
+    <title> Умный чел в очках Смотреть Онлайн и без регистрации </title>
+    <meta name="keywords" content="умный, чел, в, очках, " />
 </head>
 
 <body>
