--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <title> Умный чел в очках Смотреть Онлайн и без регистрации </title>
     <meta name="keywords" content="умный, чел, в, очках, " />
-    <link rel="shortcut icon" href="Новая папка\favicon.png" type="favicon.png">
+    <link rel="shortcut icon" href="Новая папка/favicon.png" type="favicon.png">
 </head>
 
 <body>
