--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- умный_чел_вочках--умный_чел_вочках-->
     <!-- умный_чел_вочках--умный_чел_вочках-->
     <!-- умный_чел_вочках--умный_чел_вочках-->
+    <img src="Новая папка/photo.png" alt="Умный чел в очках" width="100%" height="100%">
     <link rel="stylesheet" href="style12.css">
     <br><br>
 </body>
